# flask-aulas

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: developers.py  technologies.py
src/app/db/: __init__.py  technologies.json
src/app/routes/: __init__.py
src/app/utils/: __init__.py
